crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_062_Multicart62_Super_700_in_1_p1_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-062-Multicart62/Super 700-in-1 [p1][!].zip
rom_sha256=4ab63f776e728b69afd071ac11976a6ce22ea0f586632b2b609b2b7053e29145
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=f9d0d67b8328bcd1
checkpoint f900 fb_fnv1a64=56f8da35daa3d3c5
checkpoint f1100 fb_fnv1a64=56f8da35daa3d3c5
