crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_064_TengenRAMBO1_Balloon_Fight_J_T_Rus_Mario_Soft_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-064-TengenRAMBO1/Balloon Fight (J) [T+Rus_Mario Soft].zip
rom_sha256=69987f2249f77006eddc67d4498977e05cd4fe63de92584e57154e609b4cc557
frames=1141
fb_bytes=245760
cycles=33949776
audio_samples=836505
audio_fnv1a64=66d7ecffa9cc7748
checkpoint f900 fb_fnv1a64=33af9f5f5827d903
checkpoint f1100 fb_fnv1a64=211b4f00d9085e6a
