crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_064_TengenRAMBO1_Hard_Drivin_USA_Proto_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-064-TengenRAMBO1/Hard Drivin' (USA) (Proto) (Unl).zip
rom_sha256=0f787289c454d46815e8d0c638c9fb92827e922dc03397f9e348e64b1c75d2ed
frames=1141
fb_bytes=245760
cycles=33949771
audio_samples=836505
audio_fnv1a64=9f8d3d3d76cf25ca
checkpoint f900 fb_fnv1a64=447c95d595706489
checkpoint f1100 fb_fnv1a64=7447267eacbb9578
