crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_064_TengenRAMBO1_Skull_Crossbones_USA_Unl_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-064-TengenRAMBO1/Skull & Crossbones (USA) (Unl).zip
rom_sha256=dd43520f7b1208a632909c589f918ef41bb3434c7672b706b5907ec03a468a51
frames=1141
fb_bytes=245760
cycles=33949960
audio_samples=836509
audio_fnv1a64=9560665577815b56
checkpoint f900 fb_fnv1a64=d58437e10ceb1575
checkpoint f1100 fb_fnv1a64=a8bf3a7208bb5474
