crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_065_IremH3001_Adventures_in_the_Magic_Kingdom_U.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-065-IremH3001/Adventures in the Magic Kingdom (U) [!].zip
rom_sha256=1c7c7241e69f3713111b979ce9b758f032618d0ec59eb5ecee9d3332061fc3e8
frames=1141
fb_bytes=245760
cycles=33949948
audio_samples=836509
audio_fnv1a64=7b3b5d4bbc6efee0
checkpoint f900 fb_fnv1a64=89ee4c476c97a325
checkpoint f1100 fb_fnv1a64=89ee4c476c97a325
