crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_065_IremH3001_Adventures_in_the_Magic_Kingdom_U_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-065-IremH3001/Adventures in the Magic Kingdom (U) [!].zip
rom_sha256=1c7c7241e69f3713111b979ce9b758f032618d0ec59eb5ecee9d3332061fc3e8
frames=1141
fb_bytes=245760
cycles=33949778
audio_samples=836505
audio_fnv1a64=52cc683bb34c1c91
checkpoint f900 fb_fnv1a64=0ef3974ca078aec4
checkpoint f1100 fb_fnv1a64=0ef3974ca078aec4
